Fix: Correct name for HA static peer

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge2B.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge2B.yml
@@ -45,12 +45,12 @@ router_bgp:
   neighbors:
   - ip_address: 172.17.0.8
     peer_group: IPv4-UNDERLAY-PEERS
-    remote_as: '65000'
+    remote_as: '65199'
     peer: site-ha-enabled-leaf2A
     description: site-ha-enabled-leaf2A_Ethernet2
   - ip_address: 172.17.0.10
     peer_group: IPv4-UNDERLAY-PEERS
-    remote_as: '65000'
+    remote_as: '65199'
     peer: site-ha-enabled-leaf2B
     description: site-ha-enabled-leaf2B_Ethernet2
   - ip_address: 192.168.144.1
@@ -63,11 +63,11 @@ router_bgp:
     neighbors:
     - ip_address: 172.17.0.8
       peer_group: IPv4-UNDERLAY-PEERS
-      remote_as: '65000'
+      remote_as: '65199'
       description: site-ha-enabled-leaf2A_Ethernet2.100_vrf_IT
     - ip_address: 172.17.0.10
       peer_group: IPv4-UNDERLAY-PEERS
-      remote_as: '65000'
+      remote_as: '65199'
       description: site-ha-enabled-leaf2B_Ethernet2.100_vrf_IT
     rd: 192.168.42.3:100
     route_targets:
@@ -86,11 +86,11 @@ router_bgp:
     neighbors:
     - ip_address: 172.17.0.8
       peer_group: IPv4-UNDERLAY-PEERS
-      remote_as: '65000'
+      remote_as: '65199'
       description: site-ha-enabled-leaf2A_Ethernet2.42_vrf_PROD
     - ip_address: 172.17.0.10
       peer_group: IPv4-UNDERLAY-PEERS
-      remote_as: '65000'
+      remote_as: '65199'
       description: site-ha-enabled-leaf2B_Ethernet2.42_vrf_PROD
     rd: 192.168.42.3:42
     route_targets:
@@ -499,7 +499,7 @@ router_path_selection:
     - name: Ethernet53
     static_peers:
     - router_ip: 192.168.142.2
-      name: LAN_HA
+      name: cv-pathfinder-edge2A
       ipv4_addresses:
       - 172.17.0.5
       - 172.17.0.7
