--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge2B.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge2B.cfg
@@ -99,7 +99,7 @@ router path-selection
       local interface Ethernet53
       !
       peer static router-ip 192.168.142.2
-         name LAN_HA
+         name cv-pathfinder-edge2A
          ipv4 address 172.17.0.5
          ipv4 address 172.17.0.7
    !
@@ -392,10 +392,10 @@ router bgp 65000
    neighbor WAN-OVERLAY-PEERS send-community
    neighbor WAN-OVERLAY-PEERS maximum-routes 0
    neighbor 172.17.0.8 peer group IPv4-UNDERLAY-PEERS
-   neighbor 172.17.0.8 remote-as 65000
+   neighbor 172.17.0.8 remote-as 65199
    neighbor 172.17.0.8 description site-ha-enabled-leaf2A_Ethernet2
    neighbor 172.17.0.10 peer group IPv4-UNDERLAY-PEERS
-   neighbor 172.17.0.10 remote-as 65000
+   neighbor 172.17.0.10 remote-as 65199
    neighbor 172.17.0.10 description site-ha-enabled-leaf2B_Ethernet2
    neighbor 192.168.144.1 peer group WAN-OVERLAY-PEERS
    neighbor 192.168.144.1 description cv-pathfinder-pathfinder
@@ -433,10 +433,10 @@ router bgp 65000
       route-target import evpn 100:100
       route-target export evpn 100:100
       router-id 192.168.42.3
-      neighbor 172.17.0.8 remote-as 65000
+      neighbor 172.17.0.8 remote-as 65199
       neighbor 172.17.0.8 peer group IPv4-UNDERLAY-PEERS
       neighbor 172.17.0.8 description site-ha-enabled-leaf2A_Ethernet2.100_vrf_IT
-      neighbor 172.17.0.10 remote-as 65000
+      neighbor 172.17.0.10 remote-as 65199
       neighbor 172.17.0.10 peer group IPv4-UNDERLAY-PEERS
       neighbor 172.17.0.10 description site-ha-enabled-leaf2B_Ethernet2.100_vrf_IT
       redistribute connected
@@ -446,10 +446,10 @@ router bgp 65000
       route-target import evpn 42:42
       route-target export evpn 42:42
       router-id 192.168.42.3
-      neighbor 172.17.0.8 remote-as 65000
+      neighbor 172.17.0.8 remote-as 65199
       neighbor 172.17.0.8 peer group IPv4-UNDERLAY-PEERS
       neighbor 172.17.0.8 description site-ha-enabled-leaf2A_Ethernet2.42_vrf_PROD
-      neighbor 172.17.0.10 remote-as 65000
+      neighbor 172.17.0.10 remote-as 65199
       neighbor 172.17.0.10 peer group IPv4-UNDERLAY-PEERS
       neighbor 172.17.0.10 description site-ha-enabled-leaf2B_Ethernet2.42_vrf_PROD
       redistribute connected
