--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-transit1B.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-transit1B.cfg
@@ -128,7 +128,7 @@ router path-selection
       local interface Ethernet52
       !
       peer static router-ip 192.168.143.1
-         name LAN_HA
+         name cv-pathfinder-transit1A
          ipv4 address 172.17.0.1
    !
    path-group MPLS id 100
@@ -429,7 +429,7 @@ router bgp 65000
    neighbor WAN-OVERLAY-PEERS send-community
    neighbor WAN-OVERLAY-PEERS maximum-routes 0
    neighbor 172.17.0.2 peer group IPv4-UNDERLAY-PEERS
-   neighbor 172.17.0.2 remote-as 65000
+   neighbor 172.17.0.2 remote-as 65199
    neighbor 172.17.0.2 description site-ha-enabled-leaf1_Ethernet2
    neighbor 192.168.144.1 peer group WAN-OVERLAY-PEERS
    neighbor 192.168.144.1 description cv-pathfinder-pathfinder
@@ -467,7 +467,7 @@ router bgp 65000
       route-target import evpn 100:100
       route-target export evpn 100:100
       router-id 192.168.43.2
-      neighbor 172.17.0.2 remote-as 65000
+      neighbor 172.17.0.2 remote-as 65199
       neighbor 172.17.0.2 peer group IPv4-UNDERLAY-PEERS
       neighbor 172.17.0.2 description site-ha-enabled-leaf1_Ethernet2.100_vrf_IT
       redistribute connected
@@ -477,7 +477,7 @@ router bgp 65000
       route-target import evpn 42:42
       route-target export evpn 42:42
       router-id 192.168.43.2
-      neighbor 172.17.0.2 remote-as 65000
+      neighbor 172.17.0.2 remote-as 65199
       neighbor 172.17.0.2 peer group IPv4-UNDERLAY-PEERS
       neighbor 172.17.0.2 description site-ha-enabled-leaf1_Ethernet2.42_vrf_PROD
       redistribute connected
