--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-transit1A.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-transit1A.yml
@@ -45,7 +45,7 @@ router_bgp:
   neighbors:
   - ip_address: 172.17.0.0
     peer_group: IPv4-UNDERLAY-PEERS
-    remote_as: '65000'
+    remote_as: '65199'
     peer: site-ha-enabled-leaf1
     description: site-ha-enabled-leaf1_Ethernet1
   - ip_address: 192.168.144.1
@@ -58,7 +58,7 @@ router_bgp:
     neighbors:
     - ip_address: 172.17.0.0
       peer_group: IPv4-UNDERLAY-PEERS
-      remote_as: '65000'
+      remote_as: '65199'
       description: site-ha-enabled-leaf1_Ethernet1.100_vrf_IT
     rd: 192.168.43.1:100
     route_targets:
@@ -77,7 +77,7 @@ router_bgp:
     neighbors:
     - ip_address: 172.17.0.0
       peer_group: IPv4-UNDERLAY-PEERS
-      remote_as: '65000'
+      remote_as: '65199'
       description: site-ha-enabled-leaf1_Ethernet1.42_vrf_PROD
     rd: 192.168.43.1:42
     route_targets:
@@ -517,7 +517,7 @@ router_path_selection:
     - name: Ethernet52
     static_peers:
     - router_ip: 192.168.143.2
-      name: LAN_HA
+      name: cv-pathfinder-transit1B
       ipv4_addresses:
       - 172.17.0.3
   load_balance_policies:
