--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/CV_PATHFINDER_MULTI_RR_TESTS.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/CV_PATHFINDER_MULTI_RR_TESTS.yml
@@ -7,6 +7,15 @@ wan_route_servers:
   # Not testing the overloading
   - hostname: cv-pathfinder-pathfinder1
   - hostname: cv-pathfinder-pathfinder2
+    path_groups:
+      - name: INET
+        interfaces:
+          - name: Ethernet1
+            ip_address: 10.9.9.6/31
+      - name: MPLS
+        interfaces:
+          - name: Ethernet2
+            ip_address: 10.9.9.5/31
   # This one is not in the inventory pathfinder1 & 2
   - hostname: cv-pathfinder-pathfinder3
     vtep_ip: 6.6.6.6
