--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/defs_node_type_l3_interfaces.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/defs_node_type_l3_interfaces.schema.yml
@@ -32,6 +32,17 @@ $defs:
             When the `ip_address` is `dhcp`, this optional field allows to indicate the expected
             IPv4 address/Mask to be allocated on the interface if known.
             This is not rendered in the configuration but can be used in ACLs in certain scenarios.
+        public_ip:
+          type: str
+          description: |-
+            Node IPv4 address/Mask.
+            This will be used to get the public IP in case device is behind NAT.
+            This IP can be used in the case of defining ACLs or for some specific use cases
+            where we need the public ip of the interface.
+            In case of wan_routers(edge/transit), to get public IP for an interface, we prioritise the `public_ip` over the `ip_address`
+            if both are mentioned.
+            In case of wan_rr(pathfinders), `wan_route_servers.path_groups.interfaces.ip_address` is preferrered
+            over the the `public_ip` and then the interface IP.
         encapsulation_dot1q_vlan:
           description: For subinterfaces the dot1q vlan is derived from the interface name by default, but can also be specified.
           type: int
