--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/hosts.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/hosts.yml
@@ -14,6 +14,7 @@ all:
             evpn-vtep-with-default-vrf-not-evpn:
             duplicate-vrfs:
             filter.only_vlans_in_use:
+            filter.vrfs:
             generate-cv-tags-1:
             generate-cv-tags-2:
             ignore-custom-keys-in-data-models:
