--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/defs_node_type.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/defs_node_type.schema.yml
@@ -1131,20 +1131,21 @@ $defs:
               `server` indicates that the router is a route-reflector.
 
               Only supported if `overlay_routing_protocol` is set to `ibgp`.
-          cv_pathfinder_role:
+          cv_pathfinder_transit_mode:
             documentation_options:
               table: node-type-wan-configuration
             type: str
-            $ref: "eos_designs#/keys/node_type_keys/items/keys/default_cv_pathfinder_role"
+            valid_values:
+              - none
+              - zone
+              - region
+            default: none
             description: |-
               PREVIEW: This key is currently not supported
-              Override the default CV Pathfinder role.
+              Configure the transit mode for a WAN client for CV Pathfinder designs
+              only when the `wan_mode` root key is set to `cv_pathfinder`.
 
-              This key is used for Pathfinder designs only when the `wan_mode` root
-              key is set to `cv_pathfinder`.
-
-              `pathfinder` is only a valid if `wan_role` is `server`.
-              `edge` and `transit region` are only valid if `wan_role` is `client`.
+              'zone' is not supported today.
           cv_pathfinder_region:
             documentation_options:
               table: node-type-wan-configuration
