--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
@@ -3666,6 +3666,23 @@ keys:
                       type: str
                       description: The public IP address of the Route Reflector for
                         this path-group.
+  wan_transit:
+    documentation_options:
+      table: wan-settings
+    type: dict
+    description: '`wan_transit` node type was removed while AVD WAN development feature
+
+      was in PREVIEW MODE.
+
+      Migrate to using `wan_edge` node_type and setting `node.cv_pathfinder_transit_mode:
+      region`
+
+      on your existing transit nodes.'
+    deprecation:
+      warning: true
+      new_key: 'node_type `wan_edge` and set `node.cv_pathfinder_transit_mode: region`'
+      removed: true
+      remove_in_version: 4.7.0
   wan_virtual_topologies:
     type: dict
     description: 'PREVIEW: WAN Preview
