--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/CV_PATHFINDER_TESTS.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/CV_PATHFINDER_TESTS.yml
@@ -436,3 +436,6 @@ application_classification:
         port_values:
           - 30000-30100
           - 31000-31100
+
+wan_transit:
+  blah: test_da_stuff
