--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/wan_transit.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/wan_transit.schema.yml
@@ -13,10 +13,10 @@ keys:
     description: |-
       `wan_transit` node type was removed while AVD WAN development feature
       was in PREVIEW MODE.
-      Migrate to using `wan_edge` node_type and setting `node.cv_pathfinder_transit_mode: region`
-      on your existing transit nodes.
+      Migrate your existing transit nodes to using `wan_edge` node_type and set
+      `cv_pathfinder_transit_mode: region` under node settings.
     deprecation:
       warning: true
-      new_key: "node_type `wan_edge` and set `node.cv_pathfinder_transit_mode: region`"
+      new_key: "node_type `wan_edge` and set `cv_pathfinder_transit_mode: region` under node settings"
       removed: true
       remove_in_version: "4.7.0"
