--- a/ansible_collections/arista/avd/roles/eos_validate_state/tasks/anta_tests.yml
+++ b/ansible_collections/arista/avd/roles/eos_validate_state/tasks/anta_tests.yml
@@ -13,6 +13,7 @@
     save_catalog: "{{ save_catalog | arista.avd.default(false) }}"
     device_catalog_path: "{{ test_catalogs_dir }}/{{ inventory_hostname }}-catalog.yml"
     test_results_dir: "{{ test_results_dir }}"
+    custom_anta_catalogs_dir: "{{ custom_anta_catalogs_dir }}"
     # cprofile_file: "anta-{{inventory_hostname}}.prof"
   register: anta_results
   check_mode: false
