Added AAA tests

--- a/ansible_collections/arista/avd/molecule/eos_validate_state/intended/custom_anta_catalogs/all.yml
+++ b/ansible_collections/arista/avd/molecule/eos_validate_state/intended/custom_anta_catalogs/all.yml
@@ -1,4 +1,5 @@
 ---
+# These tests will be added to all the devices in the inventory
 anta.tests.aaa:
   - VerifyTacacsSourceIntf:
       intf: Management0
