--- a/ansible_collections/arista/avd/molecule/eos_validate_state/intended/test_catalogs/dc1-spine2-catalog.yml
+++ b/ansible_collections/arista/avd/molecule/eos_validate_state/intended/test_catalogs/dc1-spine2-catalog.yml
@@ -48,6 +48,9 @@ anta.tests.aaa:
     - exec
     - commands
     - dot1x
+anta.tests.configuration:
+- VerifyZeroTouch: null
+- VerifyRunningConfigDiffs: null
 anta.tests.connectivity:
 - VerifyLLDPNeighbors:
     neighbors:
@@ -112,6 +115,9 @@ anta.tests.connectivity:
       - IP Reachability
       custom_field: 'Source: dc1-spine2_Ethernet3 - Destination: dc1-leaf2a_Ethernet2'
       description: ip reachability test p2p links
+anta.tests.field_notices:
+- VerifyFieldNotice44Resolution: null
+- VerifyFieldNotice72Resolution: null
 anta.tests.hardware:
 - VerifyEnvironmentPower:
     states:
@@ -125,6 +131,21 @@ anta.tests.hardware:
     - Arista Networks
     - Arastra, Inc.
     - Not Present
+- VerifyTransceiversManufacturers:
+    manufacturers:
+    - Not Present
+    - Arista Networks
+    - Arastra, Inc.
+- VerifyTemperature: null
+- VerifyTransceiversTemperature: null
+- VerifyEnvironmentSystemCooling: null
+- VerifyEnvironmentCooling:
+    states:
+    - ok
+- VerifyEnvironmentPower:
+    states:
+    - ok
+- VerifyAdverseDrops: null
 anta.tests.interfaces:
 - VerifyInterfacesStatus:
     interfaces:
@@ -176,6 +197,43 @@ anta.tests.interfaces:
       - Interface State
       custom_field: Loopback0 - EVPN_Overlay_Peering
       description: Loopback Interface Status & Line Protocol == 'up'
+- VerifyInterfaceUtilization: null
+- VerifyInterfaceErrors: null
+- VerifyInterfaceDiscards: null
+- VerifyInterfaceErrDisabled: null
+- VerifyInterfacesStatus:
+    interfaces:
+    - interface: Ethernet1
+      state: up
+    - interface: Ethernet2
+      protocol_status: up
+      state: up
+    - interface: Vlan10
+      protocol_status: down
+      state: adminDown
+- VerifyStormControlDrops: null
+- VerifyPortChannels: null
+- VerifyIllegalLACP: null
+- VerifyLoopbackCount:
+    number: 3
+- VerifySVI: null
+- VerifyL3MTU:
+    ignored_interfaces:
+    - Vxlan1
+    mtu: 1500
+    specific_mtu:
+    - Ethernet1: 2500
+- VerifyIPProxyARP:
+    interfaces:
+    - Ethernet1
+    - Ethernet2
+- VerifyL2MTU:
+    ignored_interfaces:
+    - Management1
+    - Vxlan1
+    mtu: 1500
+    specific_mtu:
+    - Ethernet1/1: 1500
 anta.tests.routing.bgp:
 - VerifyBGPSpecificPeers:
     address_families:
