--- a/ansible_collections/arista/avd/molecule/eos_validate_state/intended/test_catalogs/dc1-leaf1a-catalog.yml
+++ b/ansible_collections/arista/avd/molecule/eos_validate_state/intended/test_catalogs/dc1-leaf1a-catalog.yml
@@ -531,6 +531,11 @@ anta.tests.interfaces:
       description: Vxlan Interface Status & Line Protocol == 'up'
 anta.tests.mlag:
 - VerifyMlagStatus: null
+anta.tests.profiles:
+- VerifyUnifiedForwardingTableMode:
+    mode: 3
+- VerifyTcamProfile:
+    profile: vxlan-routing
 anta.tests.routing.bgp:
 - VerifyBGPSpecificPeers:
     address_families:
@@ -735,6 +740,25 @@ anta.tests.routing.generic:
 anta.tests.security:
 - VerifyAPIHttpsSSL:
     profile: eAPI_SSL_Profile
+anta.tests.snmp:
+- VerifySnmpStatus:
+    vrf: default
+- VerifySnmpIPv4Acl:
+    number: 3
+    vrf: default
+- VerifySnmpIPv6Acl:
+    number: 3
+    vrf: default
+anta.tests.software:
+- VerifyEOSVersion:
+    versions:
+    - 4.25.4M
+    - 4.26.1F
+- VerifyTerminAttrVersion:
+    versions:
+    - v1.13.6
+    - v1.8.0
+- VerifyEOSExtensions: null
 anta.tests.system:
 - VerifyNTP:
     result_overwrite:
