--- a/ansible_collections/arista/avd/molecule/eos_validate_state/intended/custom_anta_catalogs/DC2_L3_LEAVES.yml
+++ b/ansible_collections/arista/avd/molecule/eos_validate_state/intended/custom_anta_catalogs/DC2_L3_LEAVES.yml
@@ -36,3 +36,21 @@ anta.tests.multicast:
         12: False
   - VerifyIGMPSnoopingGlobal:
       enabled: True
+
+anta.tests.stp:
+  - VerifySTPMode:
+      mode: rapidPvst
+      vlans:
+        - 10
+        - 20
+  - VerifySTPBlockedPorts:
+  - VerifySTPCounters:
+  - VerifySTPForwardingPorts:
+      vlans:
+        - 10
+        - 20
+  - VerifySTPRootPriority:
+      priority: 32768
+      instances:
+        - 10
+        - 20
