--- a/ansible_collections/arista/avd/molecule/eos_validate_state/intended/custom_anta_catalogs/dc1-leaf1a.yml
+++ b/ansible_collections/arista/avd/molecule/eos_validate_state/intended/custom_anta_catalogs/dc1-leaf1a.yml
@@ -8,3 +8,15 @@ anta.tests.profiles:
 
 anta.tests.software:
   - VerifyEOSExtensions:
+
+anta.tests.vxlan:
+  - VerifyVxlan1Interface:
+  - VerifyVxlanConfigSanity:
+  - VerifyVxlanVniBinding:
+      bindings:
+        10010: 10
+        10020: 20
+  - VerifyVxlanVtep:
+      vteps:
+        - 10.1.1.5
+        - 10.1.1.6
