--- a/ansible_collections/arista/avd/molecule/eos_validate_state/intended/custom_anta_catalogs/all.yml
+++ b/ansible_collections/arista/avd/molecule/eos_validate_state/intended/custom_anta_catalogs/all.yml
@@ -96,3 +96,14 @@ anta.tests.software:
       versions:
         - v1.13.6
         - v1.8.0
+
+anta.tests.system:
+  - VerifyUptime:
+      minimum: 86400
+  - VerifyReloadCause:
+  - VerifyCoredump:
+  - VerifyAgentLogs:
+  - VerifyCPUUtilization:
+  - VerifyMemoryUtilization:
+  - VerifyFileSystemUtilization:
+  - VerifyNTP:
