Feat(eos_designs): Add system mac address to structured config under 'metadata'

--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -6117,6 +6117,8 @@ keys:
     keys:
       platform:
         type: str
+      system_mac_address:
+        type: str
       cv_tags:
         type: dict
         keys:
