--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
@@ -7577,7 +7577,7 @@ $defs:
                 type: bool
                 default: true
                 description: Enable / Disable auto CV-Pathfinder HA, when two nodes
-                  are defined in node group.
+                  are defined in the same node_group.
               ipsec:
                 type: bool
                 default: true
